--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,9 @@
-MONGO_URL = mongodb+srv://swarajpatil2127:lLQXUDjBBQvFmLL@cluster0.pypxe.mongodb.net/Ap
-PORT = 5000
-# VITE_API_BASE_URL=http://localhost:5000
+MONGO_URI = mongodb+srv://swaraj2120:h3RK1eWtoMTFWpYM@cluster0.pypxe.mongodb.net/
+
+PORT = 5001
+VITE_API_BASE_URL=http://localhost:5001
 JWT_SECRET=swarajpatil2127
+
+
 
 
